app/assets/stylesheets/lisa-app.scss
@import 'partials/_variables';
@import 'partials/_tabular-data';

.flash.error-summary {
    border-width: 4px;
    border-color: $error-red;

    a {
        font-weight: bold;
        color: $error-red;
    }
}

.form-field--error {
    border-left-width: 4px;
    border-left-color: $error-red;

    .error-notification {
        font-size: 19px;
        font-weight: bold;
        color: $error-red;
    }
}

.transaction-banner--complete .transaction-banner__subheading {
    font-size: 24px;
    font-weight: bold;
}

.error-summary--show:focus {
    outline: 3px solid #ffbf47;
}

.form-control {
    border-color: #0b0c0c;
}

.summary-subsection {
    margin-bottom: 30px;
}

